Improved service with Mapstruct